--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,11 @@ jobs:
       # specify the version here
       - image: circleci/elixir:1.5
 
-    working_directory: ~/repo
     steps:
       - checkout
+
+      - run: mix local.hex --force  # install Hex locally (without prompt)
+      - run: mix local.rebar --force  # fetch a copy of rebar (without prompt)
 
       - run: mix deps.get
       - run: mix test
