--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run: wget https://download.libsodium.org/libsodium/releases/libsodium-1.0.13.tar.gz
       - run: tar xf libsodium-1.0.13.tar.gz
       - run: cd libsodium-1.0.13
-      - run: configure
+      - run: ./configure
       - run: sudo make && sudo make check
       - run: sudo make install
       - run: cd ../
