--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,7 @@ jobs:
 
       - run: wget https://download.libsodium.org/libsodium/releases/libsodium-1.0.13.tar.gz
       - run: tar xf libsodium-1.0.13.tar.gz
-      - run: cd libsodium-1.0.13
-      - run: ./configure
-      - run: sudo make && sudo make check
-      - run: sudo make install
-      - run: cd ../
+      - run: cd libsodium-1.0.13; ./configure; make && make check; make install
 
       - run: mix local.hex --force  # install Hex locally (without prompt)
       - run: mix local.rebar --force  # fetch a copy of rebar (without prompt)
