--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
 
       - run: wget https://download.libsodium.org/libsodium/releases/libsodium-1.0.13.tar.gz
       - run: tar xf libsodium-1.0.13.tar.gz
-      - run: cd libsodium-1.0.13; ./configure; make && make check; make install
+      - run: cd libsodium-1.0.13; ./configure; make; sudo make install
 
       - run: mix local.hex --force  # install Hex locally (without prompt)
       - run: mix local.rebar --force  # fetch a copy of rebar (without prompt)
