--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - checkout
 
+      - run: wget https://download.libsodium.org/libsodium/releases/libsodium-1.0.13.tar.gz
+      - run: tar xf libsodium-1.0.13.tar.gz
+      - run: cd libsodium-1.0.13; ./configure; make; sudo make install
+
       - run: mix local.hex --force  # install Hex locally (without prompt)
       - run: mix local.rebar --force  # fetch a copy of rebar (without prompt)
 
