--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
 
     steps:
       - checkout
+      - run: wget https://download.libsodium.org/libsodium/releases/old/libsodium-1.0.13.tar.gz
       - restore_cache:
           keys:
             - libsodium-tarball-{{ checksum "libsodium*.tar.gz" }}
