--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,17 +10,16 @@ jobs:
 
     steps:
       - checkout
-      - run: wget -O libsodium.tar.gz https://download.libsodium.org/libsodium/releases/old/libsodium-1.0.13.tar.gz
       - restore_cache:
           keys:
-            - libsodium-tarball-{{ checksum "libsodium.tar.gz" }}
+            - libsodium-tarball-{{ checksum ".circleci/deps/libsodium.tar.gz" }}
             - libsodium-tarball-
             - libsodium
 
       - run: .circleci/install_libsodium.sh
 
       - save_cache:
-          key: libsodium-{{ checksum "libsodium.tar.gz" }}
+          key: libsodium-{{ checksum ".circleci/deps/libsodium.tar.gz" }}
           paths:
             - libsodium.tar.gz
 
