Restore cache for shared object

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,9 @@ jobs:
           keys:
             - libsodium-tarball-{{ checksum ".circleci/deps/libsodium.tar.gz" }}
             - libsodium-tarball-
+
+      - restore_cache:
+          keys:
             - libsodium
 
       - run: .circleci/install_libsodium.sh
