--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - save_cache:
           key: libsodium
           paths:
-            - /usr/local/lib/libsodium.tar.gz
+            - /usr/local/lib/libsodium.so
 
       - run: mix local.hex --force  # install Hex locally (without prompt)
       - run: mix local.rebar --force  # fetch a copy of rebar (without prompt)
